Added display of books

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <script src="script.js" defer></script>
     </head>
     <body><h1>My Library</h1>
-    <button id="new-book-button">New Book</button>    
+    <button id="new-book-button">New Book</button> 
+    <div id="card-div"></div>   
     </body>
 </html>
