Added undo functionality for 1 mistake

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body><h1>My Library</h1>
     <button id="new-book-button">New Book</button> 
+    <button id="undo-button">Undo</button>
     <div id="card-div"></div>   
     </body>
 </html>
