--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
     <body><h1>My Library</h1>
     <button id="new-book-button">New Book</button> 
     <button id="undo-button">Undo</button>
+    <div id="popup-div">
+        <form id="new-book-form"><h1>New Book</h1>
+            <label for="title">Title</label>
+            <input type="text" name="title" required>
+
+            <label for="author">Author</label>
+            <input type="text" name="author" required>
+
+            <label for="pages">Pages</label>
+            <input type="number" name="pages" required>
+
+            <label for="read">Read?</label>
+            <input type="checkbox" name="read">
+            
+            <button id="submit-button"type="submit" class="btn">Submit</button>
+        </form> 
+    </div>
     <div id="card-div"></div>   
     </body>
 </html>
