Popup now takes input and adds it to the library. Correct display of read value

--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
     <div id="popup-div">
         <form id="new-book-form"><h1>New Book</h1>
             <label for="title">Title</label>
-            <input type="text" name="title" required>
+            <input id="title-input" type="text" name="title" required>
 
             <label for="author">Author</label>
-            <input type="text" name="author" required>
+            <input id="author-input" type="text" name="author" required>
 
             <label for="pages">Pages</label>
-            <input type="number" name="pages" required>
+            <input id="pages-input" type="number" name="pages" required>
 
             <label for="read">Read?</label>
-            <input type="checkbox" name="read">
+            <input id="read-input" type="checkbox" name="read">
             
-            <button id="submit-button"type="submit" class="btn">Submit</button>
+            <button id="submit-button"type="button" class="btn">Submit</button>
         </form> 
     </div>
     <div id="card-div"></div>   
